# QDrantIngest

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: README.md  quick_start.py  verify_installation.py
qdrantingest/: __init__.py  coco_parser.py  embedding_generator.py  image_processor.py  qdrant_uploader.py
tests/: __init__.py  test_coco_parser.py  test_image_processor.py
